tests/baselines/reference/parserSuperExpression1.errors.txt
parserSuperExpression1.ts(3,9): error TS2335: 'super' can only be referenced in a derived class.
parserSuperExpression1.ts(7,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
parserSuperExpression1.ts(7,11): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
parserSuperExpression1.ts(10,13): error TS2335: 'super' can only be referenced in a derived class.


==== parserSuperExpression1.ts (4 errors) ====
    class C {
        private foo() {
            super.foo();
            ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
        }
    }
    
    module M1.M2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
              ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class C {
            private foo() {
                super.foo();
                ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
            }
        }
    }